# pvper

./: CHANGELOG.md  Cargo.toml  README.md
src/: dialogs.rs  frags.rs  fs.rs  journals.rs  main.rs  settings.rs  ship.rs
src/gui/: element.rs  main.rs  message.rs  mod.rs  screen.rs  state.rs
src/gui/views/: main.rs  mod.rs  plot.rs  settings.rs  statistics.rs
src/gui/widget/: frag.rs  mod.rs
