[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[package]
name = "pvped"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/stefanlight8/pvped"

[workspace]
members = ["."]

[workspace.metadata.dist]
ci = "github"
installers = []
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
cargo-dist-version = "0.32.0"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
edjr = { version = "0.1.4", features = ["tokio", "stream", "pvp", "died", "loadout", "location", "fsd"] }
futures = "0.3.32"
iced = { version = "0.14.0", features = ["tokio"] }
iced_plot = "0.4.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
